Rainfall: Fix post title spacing in editor

--- a/rainfall/style.css
+++ b/rainfall/style.css
@@ -15,7 +15,7 @@ Text Domain: rainfall
 Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, rtl-language-support, theme-options, threaded-comments, translation-ready, wide-blocks
 */
 
-.wp-block-post-title {
+.wp-block-post-title:not(.editor-post-title) {
 	margin-left: 1ch;
 	text-indent: -1ch;
 }
